force-app/main/default/src/objects/HealthCloudGA__CarePlanRecordType__mdt/HealthCloudGA__CarePlanRecordType__mdt.object-meta.xml
<CustomObject>
    <description>Valid Care Plan record types for Health Cloud.</description>
    <label>Care Plan Record Type</label>
    <pluralLabel>Care Plan Record Types</pluralLabel>
</CustomObject>