force-app/main/default/src/objects/HealthCloudGA__CarePlanRecordType__mdt/fields/HealthCloudGA__CaseRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CaseRecordTypeName__c</fullName>
    <description>Name of record type on Case object which is valid for Health Cloud</description>
    <label>Case Record Type Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>