force-app/main/default/src/objects/HealthCloudGA__CarePlanRecordType__mdt/fields/HealthCloudGA__CaseRecordTypeNamespace__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__CaseRecordTypeNamespace__c</fullName>
    <description>Care Plan record type namespace.</description>
    <label>Record Type Namespace</label>
    <length>15</length>
    <type>Text</type>
</CustomField>