force-app/main/default/src/objects/HealthCloudGA__CarePlanRecordType__mdt/fields/HealthCloudGA__Default__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default record type to be applied to Patient&apos;s care plan.</description>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>